--- a/index.html
+++ b/index.html
@@ -199,12 +199,12 @@
                     <div class=" d-flex about-sab">
                         <div class="About-text d-flex">
                             <div class="bordericon d-flex justify-content-center align-items-center ">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle 58.png" alt="">
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle 58.png" alt="images">
                             </div>
                             <p class="about-title">About Us</p>
                         </div>
                         <div class="About-title">
-                            <h1>Welcome to Ecomax – Where Every Drop Counts!</h1>
+                            <h1>Welcome To Ecomax – Where Every Drop Counts!</h1>
                         </div>
                         <div class="About-des">
                             <p>At Ecomax, we're not just about lubricant oils; we're about empowering industries,
@@ -224,7 +224,7 @@
                                         <div class="about-btn d-flex align-items-center justify-content-center">
                                             <i class="fa-solid fa-arrow-up-long"></i>
                                         </div>
-                                        <div> <span class="text">Read more</span></div>
+                                        <div> <span class="text">Read More</span></div>
                                     </div>
                                 </button>
                             </div>
@@ -348,7 +348,7 @@
                                             alt="images">
                                     </div>
                                     <div class="icon-text">
-                                        <h3 class="text-center  m-0"> customer satisfaction</h3>
+                                        <h3 class="text-center m-0"> customer satisfaction</h3>
                                     </div>
                                 </div>
                             </div>
@@ -678,16 +678,16 @@
                     </div>
                     <div class="col-12 col-xl-6">
                         <div class="col-12  d-flex mt-4 d-flex justify-content-center flex-wrap">
-                            <div class="cout d-flex justify-content-center bg-white " style="height: 180px; ">
+                            <div class="cout cout5 d-flex justify-content-center bg-white " style="height: 180px; ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
-                                        class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
+                                        class="cout-sab  counter d-flex justify-content-center align-items-center flex-column ">
                                         <h3 class="count count1 percent" data-count="10">0</h3>
                                         <span class="mt-2">Years of Experience</span>
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout  d-flex justify-content-center bg-white " style="height: 180px; ">
+                            <div class="cout cout5 d-flex justify-content-center bg-white " style="height: 180px; ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -696,7 +696,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout  d-flex justify-content-center bg-white " style="height: 180px; ">
+                            <div class="cout cout5 d-flex justify-content-center bg-white " style="height: 180px; ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -705,7 +705,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout  d-flex justify-content-center bg-white " style="height: 180px;">
+                            <div class="cout  cout5 d-flex justify-content-center bg-white " style="height: 180px;">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
