--- a/about.html
+++ b/about.html
@@ -486,14 +486,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-12 p-0 col-lg-8">
+                    <div class="col-md-12 p-0 col-lg-8 ">
                         <div class="row text-wrap">
                             <div
                                 class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3 offset-xl-1  p-0 float-left mb-3 ">
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="#" class="link-light text-decoration-none ">Home</a>
+                                        <a href="#" class="link-light text-decoration-none text-success1">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Product</a>
@@ -512,7 +512,7 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo1" aria-expanded="false"
                                         aria-controls="collapseTwo1">
-                                        <div class="mt-3 mb-3 ms-2 d-flex  justify-content-between col-12">
+                                        <div class=" m-3 d-flex  justify-content-between col-12">
                                             <p class="m-0 footer-link-title">Quick Link</p>
                                             <p class="m-0 footer-link-icon "><i
                                                     class="fa-solid fa-angle-down mt-1 me-5"></i></p>
@@ -525,7 +525,7 @@
                                         <ul class="list-group list-group-laine footer-hover">
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#"
-                                                    class="link-light text-decoration-none text-success">Home</a>
+                                                    class="link-light text-decoration-none text-success1">Home</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Product</a>
@@ -544,12 +544,11 @@
                             <div class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3   p-0 mb-3 float-left  ">
                                 <h5 class="mb-4 footer_heading">Company</h5>
                                 <ul class="list-group footer-hover">
-                                    <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a
-                                            href="about.html" class="link-light text-decoration-none text-success">About
-                                            Us</a></li>
-                                    <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a
+                                    <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
+                                            href="about.html" class="link-light text-decoration-none">About Us</a></li>
+                                    <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
                                             href="career.html" class="link-light text-decoration-none">Career</a></li>
-                                    <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a
+                                    <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
                                             href="contactus.html" class="link-light text-decoration-none">Contact Us</a>
                                     </li>
                                 </ul>
@@ -560,7 +559,7 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo2" aria-expanded="false"
                                         aria-controls="collapseTwo2">
-                                        <div class="mt-3 mb-3 ms-2 d-flex  justify-content-between col-12">
+                                        <div class=" m-3 d-flex  justify-content-between col-12">
                                             <p class="m-0 footer-link-title">Company</p>
                                             <p class="m-0 footer-link-icon "><i
                                                     class="fa-solid fa-angle-down mt-1 me-5"></i></p>
@@ -572,9 +571,8 @@
                                     <div class="accordion-body">
                                         <ul class="list-group list-group-laine footer-hover">
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a
-                                                    href="about.html"
-                                                    class="link-light text-decoration-none text-success">About Us</a>
-                                            </li>
+                                                    href="about.html" class="link-light text-decoration-none">About
+                                                    Us</a></li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a
                                                     href="career.html"
                                                     class="link-light text-decoration-none">Career</a></li>
@@ -585,7 +583,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 d-none d-md-block col-sm-6 col-md-6 col-xl-5   mb-3 p-0 float-left  ">
+                            <div class="col-12 d-none d-md-block col-sm-6 col-md-6 col-xl-5  mb-3 p-0 float-left  ">
                                 <h5 class="mb-4 footer_heading ms-5">Connect with us</h5>
                                 <ul class="list-group footer-hover ms-5">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-3"><a
@@ -616,7 +614,7 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo3" aria-expanded="false"
                                         aria-controls="collapseTwo3">
-                                        <div class="mt-3 mb-3 ms-2 d-flex  justify-content-between col-12">
+                                        <div class=" m-3 d-flex  justify-content-between col-12">
                                             <p class="m-0 footer-link-title">Connect with us</p>
                                             <p class="m-0 footer-link-icon "><i
                                                     class="fa-solid fa-angle-down mt-1 me-5"></i></p>
