--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
                                                 <i class="fa-solid fa-arrow-up-long"></i>
 
                                             </div>
-                                            <div> <span class="text ms-3 ">Contact Us</span></div>
+                                            <div> <span class="text">Contact Us</span></div>
                                         </div>
                                     </button>
 
@@ -803,7 +803,7 @@
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="#" class="link-light text-decoration-none text-success">Home</a>
+                                        <a href="#" class="link-light text-decoration-none text-success1">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Product</a>
@@ -835,7 +835,7 @@
                                         <ul class="list-group list-group-laine footer-hover">
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#"
-                                                    class="link-light text-decoration-none text-success">Home</a>
+                                                    class="link-light text-decoration-none text-success1">Home</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Product</a>
@@ -854,11 +854,11 @@
                             <div class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3   p-0 mb-3 float-left  ">
                                 <h5 class="mb-4 footer_heading">Company</h5>
                                 <ul class="list-group footer-hover">
-                                    <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a
+                                    <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
                                             href="about.html" class="link-light text-decoration-none">About Us</a></li>
-                                    <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a
+                                    <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
                                             href="career.html" class="link-light text-decoration-none">Career</a></li>
-                                    <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a
+                                    <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
                                             href="contactus.html" class="link-light text-decoration-none">Contact Us</a>
                                     </li>
                                 </ul>
