--- a/index.html
+++ b/index.html
@@ -150,10 +150,11 @@
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/4aaad017295fca31b48000780707993c.png"
                                     class=" img-fluid d-none d-sm-block   d-lg-none" alt="images" style="width: 100%;">
 
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/0c21151275e30d05b26232ea864bc712.png"
-                                    class="d-block d-sm-none " alt="images" style="width: 100%;">
-
+                                    
                             </div>
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/home/0c21151275e30d05b26232ea864bc712.png"
+                                        class="d-block d-sm-none " alt="images">
+
 
                             <div
                                 class="carousel-item  hero-xs-image hero-sm-image hero-md-image  hero-lg-image hero-xl-image">
@@ -561,7 +562,7 @@
                                 <div class="about-btn d-flex align-items-center justify-content-center">
                                     <i class="fa-solid fa-arrow-up-long"></i>
                                 </div>
-                                <div><span class="text">View all</span></div>
+                                <div><span class="text">View All</span></div>
                             </div>
                         </button>
                     </div>
@@ -678,7 +679,7 @@
                     </div>
                     <div class="col-12 col-xl-6">
                         <div class="col-12  d-flex mt-4 d-flex justify-content-center flex-wrap">
-                            <div class="cout cout5 d-flex justify-content-center bg-white " style="height: 180px; ">
+                            <div class="cout col-12 col-md-5 d-flex justify-content-center bg-white " style="height: 180px; ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab  counter d-flex justify-content-center align-items-center flex-column ">
@@ -687,7 +688,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout cout5 d-flex justify-content-center bg-white " style="height: 180px; ">
+                            <div class="cout col-12 col-md-5 d-flex justify-content-center bg-white " style="height: 180px; ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -696,7 +697,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout cout5 d-flex justify-content-center bg-white " style="height: 180px; ">
+                            <div class="cout col-12 col-md-5 d-flex justify-content-center bg-white " style="height: 180px; ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -705,7 +706,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout  cout5 d-flex justify-content-center bg-white " style="height: 180px;">
+                            <div class="cout col-12 col-md-5 d-flex justify-content-center bg-white " style="height: 180px;">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
