--- a/about.html
+++ b/about.html
@@ -493,7 +493,7 @@
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="#" class="link-light text-decoration-none ">Home</a>
+                                        <a href="#" class="link-light text-decoration-none text-success1">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Product</a>
@@ -525,7 +525,7 @@
                                         <ul class="list-group list-group-laine footer-hover">
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#"
-                                                    class="link-light text-decoration-none ">Home</a>
+                                                    class="link-light text-decoration-none text-success1">Home</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Product</a>
@@ -545,7 +545,7 @@
                                 <h5 class="mb-4 footer_heading">Company</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
-                                            href="about.html" class="link-light text-decoration-none text-success1 demo">About Us</a></li>
+                                            href="about.html" class="link-light text-decoration-none">About Us</a></li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
                                             href="career.html" class="link-light text-decoration-none">Career</a></li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
