ABOUT-US-issue-set

--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
               <p>But our dedication doesn't stop there. We are also deeply invested in fostering strong relationships with
                 our customers and partners. By providing personalized service, expert advice, and ongoing support, we strive
                 to be more than just a supplier – we aim to be a trusted ally in your success. </p>
-              <p class="mb-0 ">As we look to the future, we remain committed to driving innovation, sustainability, and
+              <p class="mb-0 set-margin ">As we look to the future, we remain committed to driving innovation, sustainability, and
                 customer satisfaction. Whether you're powering a fleet of vehicles, operating heavy machinery, or seeking
                 lubricant solutions for your industrial processes, you can rely on Ecomax to keep your engines running
                 smoothly, efficiently, and responsibly.</p>
