--- a/career.html
+++ b/career.html
@@ -42,7 +42,7 @@
                   <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" alt="images"
                           class="img-fluid"></a>
               </div>
-              <div class="nav   d-none d-lg-block d-flex justify-content-end">
+              <div class="nav  d-none d-lg-block d-flex justify-content-end">
                   <ul class="d-flex p-0 mb-0 justify-content-end header-nav">
                       <li>
                           <a href="/">HOME</a>
@@ -123,8 +123,8 @@
           on the lookout for talented individuals who share our passion and commitment.
         </p>
       </div>
-      <div class="row image_with_form_container align-items-center">
-        <div class="col-12 form_container order-1 order-sm-0 col-sm-7 ">
+      <div class="row p-0 image_with_form_container align-items-center">
+        <div class="col-12 pe-0 form_container order-1 order-sm-0 col-sm-7 ">
           <form action="" class="form_container_in">
             <div class="row form_field_container flex-column flex-sm-row ">
               <div class="col">
@@ -133,17 +133,17 @@
               </div>
               <div class="col ">
                 <input type="text" name="email" placeholder="Your Email*" class="form-control field"
-                  aria-label="First name" required>
+                  aria-label="First name" required >
               </div>
             </div>
             <div class="row form_field_container flex-column flex-sm-row">
               <div class="col ">
                 <input type="number" name="phone_number" placeholder="Phone Number*" required
-                  class="field form-control">
+                  class="field form-control" >
               </div>
               <div class="col ">
                 <input type="text" name="role" placeholder="Applying for which role" required
-                  class="field form-control">
+                  class="field form-control" >
               </div>
             </div>
             <div class="row form_field_container flex-column flex-sm-row ">
@@ -151,7 +151,7 @@
                 <div
                   class='file-input d-flex align-items-center justify-content-between position-relative border rounded-1'>
                   <input type='file' class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0">
-                  <span class='label' data-js-label>Resume</span>
+                  <span style="color:  #8A8A8A;" class='label' data-js-label>Resume</span>
                   <span class='button'>Browse</span>
                 </div>
               </div>
@@ -178,7 +178,7 @@
          
         </div>
         <div
-          class="col-12 image_container order-sm-1 order-0 col-sm-5 ps-sm-2 ps-0 ps-lg-4  d-flex justify-content-center justify-content-sm-start ">
+          class="col-12 image_container order-sm-1 order-0 col-sm-5 ps-sm-2 ps-0 ps-lg-5  d-flex justify-content-center justify-content-sm-start ">
           <div class="career-img-container">
             <img src="https://ik.imagekit.io/ecomax/assets/images/career/Mask group.png" alt="oil-img" class="img-fluid bg-dark h-100">
           </div>
@@ -233,14 +233,17 @@
     </div>
   </section>
   <!-- Why Choose Us Section End -->
+  <section class="section-padding-footer">
+
+  </section>
     <!-- Footer start -->
     <footer>
         <div class="footer_inner">
             <div class="page_width ">
                 <div class="row p-0">
                     <div class="col-lg-4 col-md-12 mb-4 mb-sm-5  text-light">
-                        <img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image" width="340"
-                            class="footer-logo-image img-fluid ">
+                        <a href="/"><img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image" width="340"
+                            class="footer-logo-image img-fluid "></a>
                         <p class="footer-text">Powering Performance, Maximizing Efficiency: Ecomax - Your Engine's Best
                             Companion
                         </p>
@@ -263,7 +266,7 @@
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="#" class="link-light text-decoration-none text-success1">Home</a>
+                                        <a href="#" class="link-light text-decoration-none ">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Product</a>
@@ -295,7 +298,7 @@
                                         <ul class="list-group list-group-laine footer-hover">
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#"
-                                                    class="link-light text-decoration-none text-success1">Home</a>
+                                                    class="link-light text-decoration-none ">Home</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Product</a>
@@ -317,7 +320,7 @@
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
                                             href="about.html" class="link-light text-decoration-none">About Us</a></li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
-                                            href="career.html" class="link-light text-decoration-none">Career</a></li>
+                                            href="career.html" class="link-light text-decoration-none text-success1">Career</a></li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
                                             href="contactus.html" class="link-light text-decoration-none">Contact Us</a>
                                     </li>
@@ -345,7 +348,7 @@
                                                     Us</a></li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a
                                                     href="career.html"
-                                                    class="link-light text-decoration-none">Career</a></li>
+                                                    class="link-light text-decoration-none text-success1">Career</a></li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a
                                                     href="contactus.html"
                                                     class="link-light text-decoration-none">Contact Us</a></li>
