--- a/contactus.html
+++ b/contactus.html
@@ -124,72 +124,74 @@
   </section>
   <!-- ---------------------- map Section End ------------------------------ -->
   <!-- ---------------------- Contact Connect Section Start ------------------------------ -->
-  <section class="contact-connect-section section_padding">
+  <section class="section_padding">
     <div class="page_width ">
-      <div class="heading_container text-center">
-        <h2 class="main-heading">
-          Connect with us
-        </h2>
-        <p class="heading_description contact-connect-description">
-          Empowering Engines, Building Relationships: Let's Connect!
-        </p>
-      </div>
-      <div class="contact_detail_container">
-        <div class="row gap-3 justify-content-center ">
-          <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
-            <div class="d-flex gap-sm-4 gap-3">
-              <div class="icon_container">
-                <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Mail.png" alt="mail">
-              </div>
-              <div class="contact_detail_card">
-                <p class="contact_card_heading fw-medium "> Email</p>
-                <p class="contact_detail m-0"><a
-                    href="mailto:infoecomaxlubricant@gmail.com">infoecomaxlubricant@gmail.com</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
-            <div class="d-flex gap-sm-4 gap-3">
-              <div class="icon_container">
-                <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Phone.png" alt="phone">
-              </div>
-              <div class="contact_detail_card">
-                <p class="contact_card_heading fw-medium "> Call</p>
-                <p class="contact_detail m-0"><a href="tel:+91 99980 35620">+91 99980 35620</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
-            <div class="d-flex align-items-center gap-sm-4 gap-3">
-              <div class="icon_container">
-                <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Location.png" alt="location">
-              </div>
-              <div class="contact_detail_card">
-                <p class="contact_card_heading fw-medium "> Office</p>
-                <p class="contact_detail m-0">Block No. E-37, Hindva Dreams, Dhoran Pardi Gaypagla Road, Kamrej, Surat,
-                  Gujarat-394155</p>
-              </div>
-            </div>
-          </div>
+        <div class="heading_container text-center">
+            <h2 class="main-heading">
+                Connect With Us
+            </h2>
+            <p class="heading_description contact-connect-description">
+                Empowering Engines, Building Relationships: Let's Connect!
+            </p>
         </div>
-      </div>
+        <div class="contact_detail_container">
+            <div class="row gap-3 justify-content-center ">
+                <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
+                    <div class="d-flex gap-sm-4 gap-3">
+                        <div class="icon_container">
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Mail.png" alt="mail">
+                        </div>
+                        <div class="contact_detail_card">
+                            <p class="contact_card_heading fw-medium "> Email</p>
+                            <p class="contact_detail m-0"><a
+                                    href="mailto:infoecomaxlubricant@gmail.com">infoecomaxlubricant@gmail.com</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
+                    <div class="d-flex gap-sm-4 gap-3">
+                        <div class="icon_container">
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Phone.png" alt="phone">
+                        </div>
+                        <div class="contact_detail_card">
+                            <p class="contact_card_heading fw-medium "> Call</p>
+                            <p class="contact_detail m-0"><a href="tel:+91 99980 35620">+91 99980 35620</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
+                    <div class="d-flex align-items-center gap-sm-4 gap-3">
+                        <div class="icon_container">
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Location.png"
+                                alt="location">
+                        </div>
+                        <div class="contact_detail_card">
+                            <p class="contact_card_heading fw-medium "> Office</p>
+                            <p class="contact_detail m-0">Block No. E-37, Hindva Dreams, Dhoran Pardi Gaypagla Road,
+                                Kamrej, Surat, Gujarat-394155</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </section>
+</section>
   <!-- ---------------------- Contact Connect Section End ------------------------------ -->
   <!-- ------------------------- Contact Form Section Start ----------------------------- -->
   <section class="career_form_section section_padding">
     <div class="page_width">
 
-      <div class="row image_with_form_container align-items-center">
+      <div class="row image_with_form_container align-items-center  p-0">
         <div
-          class="col-12 image_container col-sm-5 ps-sm-2 ps-0 ps-lg-4  d-flex justify-content-center justify-content-sm-start ">
+          class="col-12  image_container col-sm-5  ps-0  d-flex justify-content-end align-items-center ">
           <div class="career-img-container">
             <img src="https://ik.imagekit.io/ecomax/assets/images/contact/contact_form.png" alt="oil-img"
-              class="img-fluid bg-dark h-100">
+              class="img-fluid bg-dark h-100 col-12">
           </div>
         </div>
 
-        <div class="col-12 form_container  col-sm-7 ">
+        <div class="col-12 p-0 ps-lg-5 form_container  col-sm-7 pe-lg-4 ">
           <form action="" id="detaform" class="form_container_in">
             <div class="row form_field_container flex-column flex-sm-row ">
               <div class="col">
@@ -251,8 +253,8 @@
         <div class="page_width ">
             <div class="row p-0">
                 <div class="col-lg-4 col-md-12 mb-4 mb-sm-5  text-light">
-                    <img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image" width="340"
-                        class="footer-logo-image img-fluid ">
+                    <a href="/"><img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image" width="340"
+                        class="footer-logo-image img-fluid "></a>
                     <p class="footer-text">Powering Performance, Maximizing Efficiency: Ecomax - Your Engine's Best
                         Companion
                     </p>
@@ -275,7 +277,7 @@
                             <h5 class="mb-4 footer_heading">Quick Link</h5>
                             <ul class="list-group footer-hover">
                                 <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                    <a href="#" class="link-light text-decoration-none text-success1">Home</a>
+                                    <a href="#" class="link-light text-decoration-none ">Home</a>
                                 </li>
                                 <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                     <a href="#" class="link-light text-decoration-none">Product</a>
@@ -307,7 +309,7 @@
                                     <ul class="list-group list-group-laine footer-hover">
                                         <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                             <a href="#"
-                                                class="link-light text-decoration-none text-success1">Home</a>
+                                                class="link-light text-decoration-none ">Home</a>
                                         </li>
                                         <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                             <a href="#" class="link-light text-decoration-none">Product</a>
@@ -331,7 +333,7 @@
                                 <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
                                         href="career.html" class="link-light text-decoration-none">Career</a></li>
                                 <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
-                                        href="contactus.html" class="link-light text-decoration-none">Contact Us</a>
+                                        href="contactus.html" class="link-light text-decoration-none text-success1">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
@@ -360,7 +362,7 @@
                                                 class="link-light text-decoration-none">Career</a></li>
                                         <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a
                                                 href="contactus.html"
-                                                class="link-light text-decoration-none">Contact Us</a></li>
+                                                class="link-light text-decoration-none text-success1">Contact Us</a></li>
                                     </ul>
                                 </div>
                             </div>
