--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                                     alt="images">
 
                             </div>
-                            <p class=" text-white">Ecomax Product Features</p>
+                            <p class=" text-white"><p class="d-md-none text-white">About us</p><p class="d-none d-md-block text-white">Ecomax Product Features</p></p>
                         </div>
                         <div class="About-title mt-1">
                             <h2 class="m-0">The Feature Of Ecomax Engine <br
@@ -455,6 +455,7 @@
                                 <h3>Revitalize Your Ride: <br>Discover Ecomax Engine Oils!</h3>
                             </div>
                             <div class="col-12 d-flex justify-content-between">
+                            
                                 <div class="swiper-button-prev"><i class="fa-solid fa-arrow-left-long"></i></div>
                                 <div class="swiper-button-next"><i class="fa-solid fa-arrow-right-long"></i></div>
                             </div>
@@ -774,8 +775,8 @@
             <div class="page_width ">
                 <div class="row p-0">
                     <div class="col-lg-4 col-md-12 mb-4 mb-sm-5  text-light">
-                        <img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image" width="340"
-                            class="footer-logo-image img-fluid ">
+                        <a href="/"><img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image" width="340"
+                            class="footer-logo-image img-fluid "></a>
                         <p class="footer-text">Powering Performance, Maximizing Efficiency: Ecomax - Your Engine's Best
                             Companion
                         </p>
@@ -792,7 +793,7 @@
                         </div>
                     </div>
                     <div class="col-md-12 p-0 col-lg-8 ">
-                        <div class="row text-wrap">
+                        <div class="row text-wrap footer-set">
                             <div
                                 class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3 offset-xl-1  p-0 float-left mb-3 ">
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
@@ -813,10 +814,10 @@
                             </div>
                             <div
                                 class="accordion-item footer-link d-md-none col-12 col-sm-3 col-md-3 col-xl-3 offset-xl-1  p-0 float-left mb-3">
-                                <h2 class="accordion-header" id="headingTwo1">
+                                <h2 class="accordion-header" id="headingTwo10">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseTwo1" aria-expanded="false"
-                                        aria-controls="collapseTwo1">
+                                        data-bs-target="#collapseTwo10" aria-expanded="false"
+                                        aria-controls="collapseTwo10">
                                         <div class=" m-3 d-flex  justify-content-between col-12">
                                             <p class="m-0 footer-link-title">Quick Link</p>
                                             <p class="m-0 footer-link-icon "><i
@@ -824,7 +825,7 @@
                                         </div>
                                     </button>
                                 </h2>
-                                <div id="collapseTwo1" class="accordion-collapse collapse" aria-labelledby="headingTwo1"
+                                <div id="collapseTwo10" class="accordion-collapse collapse" aria-labelledby="headingTwo10"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
                                         <ul class="list-group list-group-laine footer-hover">
@@ -850,7 +851,7 @@
                                 <h5 class="mb-4 footer_heading">Company</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
-                                            href="about.html" class="link-light text-decoration-none">About Us</a></li>
+                                            href="about.html" class="link-light text-decoration-none ">About Us</a></li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
                                             href="career.html" class="link-light text-decoration-none">Career</a></li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
@@ -876,7 +877,7 @@
                                     <div class="accordion-body">
                                         <ul class="list-group list-group-laine footer-hover">
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a
-                                                    href="about.html" class="link-light text-decoration-none">About
+                                                    href="about.html" class="link-light text-decoration-none    ">About
                                                     Us</a></li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a
                                                     href="career.html"
