--- a/about.html
+++ b/about.html
@@ -21,7 +21,11 @@
 </head>
 
 <body>
-
+    <div class="scrollbar back d-none">
+        <a href="#top">
+            <i class="fa-solid fa-arrow-up-long text-white"></i>
+        </a>
+    </div>
     <div class="top-bar top-bar-xs top-bar-sm top-bar-md top-bar-lg">
         <div class="container1">
             <div class="row">
@@ -523,8 +527,8 @@
                                         aria-controls="collapseTwo1">
                                         <div class=" m-3 d-flex  justify-content-between col-12">
                                             <p class="m-0 footer-link-title">Quick Link</p>
-                                            <p class="m-0 footer-link-icon "><i
-                                                class="fa-solid fa-angle-down mt-1 me-5"></i></p>
+                                                <p class="m-0 footer-link-icon d-flex justify-content-end"><i
+                                            class="fa-solid fa-angle-down mt-1 me-5"></i></p>
                                         </div>
                                     
                                     </button>
