--- a/contactus.html
+++ b/contactus.html
@@ -207,7 +207,7 @@
             </div>
             <div class="row form_field_container flex-column flex-sm-row">
               <div class="col ">
-                <input type="email" name="email" id="email" placeholder="email*" required class="field form-control">
+                <input type="email" name="email" id="email" placeholder="Email*" required class="field form-control">
                 <p id="e1" class="p-0 ms-1 text-danger"></p>
               </div>
               <div class="col ">
