--- a/about.html
+++ b/about.html
@@ -230,12 +230,12 @@
                                     <div class="benefit-main">
 
                                         <div class="benefit-pro ">
-                                            <div class="icon2 text-center">
+                                            <div class="icon5 text-center">
                                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image (7).png"
                                                     alt="images">
                                             </div>
                                             <div class="icon-text">
-                                                <h3 class="text-center  m-0"> customer satisfaction</h3>
+                                                <h3 class="text-center  m-0"> Engine protection</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -273,12 +273,12 @@
                             <div class="benefit-main">
 
                                 <div class="benefit-pro ">
-                                    <div class="icon2 text-center">
+                                    <div class="icon5 text-center">
                                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image (7).png"
                                             alt="images">
                                     </div>
                                     <div class="icon-text">
-                                        <h3 class="text-center  m-0"> customer satisfaction</h3>
+                                        <h3 class="text-center  m-0"> Engine protection</h3>
                                     </div>
                                 </div>
                             </div>
