--- a/career.html
+++ b/career.html
@@ -117,7 +117,7 @@
         <h2 class="main-heading">
           Fuel Your Future: Discover Exciting Career Opportunities at Ecomax!
         </h2>
-        <p class="heading_description">
+        <p class="heading_description mb-0">
           At Ecomax, we're more than just a manufacturer and supplier of lubricant engine oil — we're a team dedicated
           to excellence, innovation, and sustainability. As we continue to grow and expand our operations, we're always
           on the lookout for talented individuals who share our passion and commitment.
@@ -132,17 +132,17 @@
                   aria-label="First name" required>
               </div>
               <div class="col ">
-                <input type="text" name="email" placeholder="Your Email*" class="form-control field"
+                <input type="text" name="email" placeholder="Last Name*" class="form-control field"
                   aria-label="First name" required >
               </div>
             </div>
             <div class="row form_field_container flex-column flex-sm-row">
               <div class="col ">
-                <input type="number" name="phone_number" placeholder="Phone Number*" required
+                <input type="email" name="phone_number" placeholder="Email*" required
                   class="field form-control" >
               </div>
               <div class="col ">
-                <input type="text" name="role" placeholder="Applying for which role" required
+                <input type="number" name="role" placeholder="Phone Number*" required
                   class="field form-control" >
               </div>
             </div>
@@ -314,7 +314,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3   p-0 mb-3 float-left  ">
+                            <div class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3 p-0 mb-3 float-left  ">
                                 <h5 class="mb-4 footer_heading">Company</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
