--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="container-fluid ps-0">
             <div class="row">
                 <div class="col-12 p-0 about-main flex-wrap d-flex">
-                    <div class="col-12 col-sm-6 ">
+                    <div class="col-12  col-sm-6 ">
                         <div class="About-img">
                             <img src="https://ik.imagekit.io/ecomax/assets/images/home/c4eba8c3d0dcb9473a251bf8858244f3.png"
                                 alt="images" class="col-12">
@@ -206,6 +206,7 @@
                                 driving sustainability and building lasting relationships. With over 10 years of
                                 experience under our belt, we've honed our craft, perfected our products and
                                 cultivated a company culture centered around innovation and integrity.</p>
+                            
                             <p>Our journey began with a simple belief: that quality should never be compromised, and
                                 sustainability should always be a priority. What started as a passion project has
                                 blossomed into a global enterprise, touching lives and lubricating industries
@@ -286,7 +287,8 @@
                                                     alt="images">
                                             </div>
                                             <div class="icon-text">
-                                                <h3 class="text-center m-0"> Engine protection</h3>
+                                                <h3 class="text-center m-0"> customer <br>
+                                                    satisfaction</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -295,12 +297,12 @@
                                     <div class="benefit-main">
 
                                         <div class="benefit-pro ">
-                                            <div class="icon5 text-center">
+                                            <div class=" icon5 text-center">
                                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image (7).png"
                                                     alt="images">
                                             </div>
-                                            <div class="icon-text">
-                                                <h3 class="text-center  m-0">Engine protection</h3>
+                                            <div class="icon-text icon-text1">
+                                                <h3 class="text-center m-0"> Engine <br> protection</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -308,6 +310,7 @@
                             </div>
                             <br>
                             <div class="swiper-pagination"></div>
+                         
                         </div>
                     </div>
                     <div class="col-12  benefit-slaider-icon col-xl-6 d-none d-sm-block">
@@ -331,7 +334,7 @@
                                             alt="images">
                                     </div>
                                     <div class="icon-text">
-                                        <h3 class="text-center m-0"> customer satisfaction</h3>
+                                        <h3 class="text-center m-0"> customer <br> satisfaction</h3>
                                     </div>
                                 </div>
                             </div>
@@ -342,8 +345,8 @@
                                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image (7).png"
                                             alt="images">
                                     </div>
-                                    <div class="icon-text">
-                                        <h3 class="text-center m-0"> Engine protection</h3>
+                                    <div class="icon-text icon-text1">
+                                        <h3 class="text-center m-0"> Engine <br> protection</h3>
                                     </div>
                                 </div>
                             </div>
@@ -360,7 +363,7 @@
     <section class="facility section-padding ">
         <div class="container1">
             <div class="row">
-                <div class="col-12 d-flex flex-wrap align-items-center">
+                <div class="col-12 p-0 d-flex flex-wrap align-items-center">
                     <div class="col-12 col-xl-4 facility-text ">
                         <h2 class="mb-0">IN HOUSE
                             GREASE & OIL
@@ -370,26 +373,17 @@
                         <div class="swiper-wrapper">
 
                             <div class="swiper-slide">
-
                                 <div class="facility-img">
-                                    <img src="https://ik.imagekit.io/ecomax/assets/images/home/dcbd1dda33c1a8d025adbfff995976dc.png"
-                                        alt="images" class="img-fluid">
-                                    <div class="facility-logo d-flex justify-content-center align-items-center">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/b26897cb8215776e781e01dfb6ebae6d.png"
-                                            alt="images" class="img-fluid">
-                                    </div>
+                                    <img src="https://ik.imagekit.io/ecomax/assets/images/home/images.png"
+                                    alt="images" class="img-fluid ">
                                 </div>
-
-
                             </div>
                             <div class="swiper-slide">
 
-                                <div class=" facility-img">
-                                    <img src="https://ik.imagekit.io/ecomax/assets/images/home/d5973dc5e719543e891e93996136e2f5 (1).png"
+                                <div class="swiper-slide">
+                                    <div class="facility-img">
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/images (1).png"
                                         alt="images" class="img-fluid ">
-                                    <div class="facility-logo d-flex justify-content-center align-items-center">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/10689085f94b1330cb80d0f2ce5da45c.png"
-                                            alt="images" class="img-fluid">
                                     </div>
                                 </div>
 
@@ -397,12 +391,10 @@
 
                             <div class="swiper-slide">
 
-                                <div class="facility-img">
-                                    <img src="https://ik.imagekit.io/ecomax/assets/images/home/0431091204b3c8b2f8d386f625141087.png"
-                                        alt="images" class="img-fluid">
-                                    <div class="facility-logo d-flex justify-content-center align-items-center">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/1315451471a7f2c59bb87bea00ab113b.png"
-                                            alt="images" class="img-fluid">
+                                <div class="swiper-slide">
+                                    <div class="facility-img">
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/lebori.png"
+                                        alt="images" class="img-fluid ">
                                     </div>
                                 </div>
 
@@ -570,7 +562,6 @@
     <!-- End:  Revitalize  -->
     <!-- Start: Fueling Excellence -->
 
-
     <section class="Fueling-Excellence Contact section-padding">
         <div class="container1">
             <div class="row">
@@ -652,13 +643,13 @@
                 <div class="col-12 p-0 d-flex flex-wrap align-items-center">
                     <div class="col-12 col-xl-6 Global-Excellence-title-main">
                         <div class="Global-Excellence-title">
-                            <h3>
+                            <h3 class="mb-0">
                                 Driving Success Through <br class="d-none"> Customer - Centric Solutions & <br
                                     class="d-none"> Global Excellence
                             </h3>
                         </div>
                         <div class="Global-Excellence-text">
-                            <p>Discover the power of Ecomax, a trusted leader in lubricant engine oil<br class="d-none">
+                            <p class="mb-0">Discover the power of Ecomax, a trusted leader in lubricant engine oil<br class="d-none">
                                 manufacturing
                                 and supply. Our decades-long commitment to excellence <br class="d-none"> and innovation
                                 has earned the
@@ -724,7 +715,7 @@
     <section class="Fueling-Excellence Contact section-padding">
         <div class="container1">
             <div class="row">
-                <div class="col-12 flex-wrap d-flex justify-content-center align-items-center">
+                <div class="col-12 p-0 flex-wrap d-flex justify-content-center align-items-center">
                     <div class="col-12 col-xl-6 Fueling-Excellence-img">
                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/fa19411efabf7ac1d6f51bc891f2804a.png"
                             alt="images" class="col-12">
@@ -757,8 +748,6 @@
                                             <div> <span class="text">Contact Us</span></div>
                                         </div>
                                     </button>
-
-
                                 </div>
                             </div>
                         </div>
