--- a/about.html
+++ b/about.html
@@ -129,11 +129,13 @@
                   and building lasting relationships. With over 10 years of experience under our belt, we've honed our
                   craft, perfected our products and cultivated a company culture centered around innovation and integrity.
                 </p>
+                <p class="border-About"></p>
                 <p class=" mb-0 about-seciton-description text-center text-md-start ">
                   Our journey began with a simple belief: that quality should never be compromised, and sustainability
                   should always be a priority. What started as a passion project has blossomed into a global enterprise,
                   touching lives and lubricating industries across continents.
                 </p>
+                 <p class="border-About"></p>
                 <p class="mb-0 about-seciton-description text-center text-md-start ">
                   What sets us apart is our relentless pursuit of excellence in every aspect of our business. From research
                   and development to production and distribution, we adhere to the highest standards of quality, safety, and
