--- a/career.html
+++ b/career.html
@@ -39,7 +39,7 @@
       <div class="row">
           <div class="p-0 d-flex align-items-center justify-content-between">
               <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
-                  <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" alt="images"
+                  <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo1.png" alt="images"
                           class="img-fluid"></a>
               </div>
               <div class="nav  d-none d-lg-block d-flex justify-content-end">
@@ -75,7 +75,7 @@
                       <div class="offcanvas-header">
                           <h5 class="offcanvas-title" id="offcanvasScrollingLabel">
                               <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
-                                  <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" alt="images"
+                                  <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo1.png" alt="images"
                                           class="img-fluid"></a>
                               </div>
                           </h5>
@@ -280,7 +280,7 @@
                                 </ul>
                             </div>
                             <div
-                                class="accordion-item footer-link d-md-none col-12 col-sm-3 col-md-3 col-xl-3 offset-xl-1  p-0 float-left mb-3">
+                                class="accordion-item footer-link d-md-none col-12 offset-xl-1  p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo1">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo1" aria-expanded="false"
@@ -327,7 +327,7 @@
                                 </ul>
                             </div>
                             <div
-                                class="accordion-item footer-link d-md-none col-12 col-sm-3 col-md-3 col-xl-3 offset-xl-1  p-0 float-left mb-3">
+                                class="accordion-item footer-link d-md-none col-12  offset-xl-1  p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo2">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo2" aria-expanded="false"
@@ -382,7 +382,7 @@
                                 </ul>
                             </div>
                             <div
-                                class="accordion-item footer-link d-md-none col-12 col-sm-3 col-md-3 col-xl-3 offset-xl-1  p-0 float-left mb-3">
+                                class="accordion-item footer-link d-md-none col-12  offset-xl-1  p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo3">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo3" aria-expanded="false"
