--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <a href="/" class="text-success">HOME</a>
                             </li>
                             <li>
-                                <a href="#">PRODUCTS</a>
+                                <a href="products.html">PRODUCTS</a>
                             </li>
 
                             <li>
@@ -105,7 +105,7 @@
                                         <a href="/" class="text-success">HOME</a>
                                     </li>
                                     <li class="m-2">
-                                        <a href="#">PRODUCTS</a>
+                                        <a href="products.html">PRODUCTS</a>
                                     </li>
         
                                     <li class="m-2">
@@ -287,7 +287,7 @@
                                                     alt="images">
                                             </div>
                                             <div class="icon-text">
-                                                <h3 class="text-center m-0"> customer <br>
+                                                <h3 class="text-center m-0"> Customer <br>
                                                     satisfaction</h3>
                                             </div>
                                         </div>
@@ -334,7 +334,7 @@
                                             alt="images">
                                     </div>
                                     <div class="icon-text">
-                                        <h3 class="text-center m-0"> customer <br> satisfaction</h3>
+                                        <h3 class="text-center m-0"> Customer <br> satisfaction</h3>
                                     </div>
                                 </div>
                             </div>
@@ -787,10 +787,10 @@
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="#" class="link-light text-decoration-none text-success1">Home</a>
+                                        <a href="/" class="link-light text-decoration-none text-success1">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="#" class="link-light text-decoration-none">Product</a>
+                                        <a href="products.html" class="link-light text-decoration-none">Product</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -818,11 +818,11 @@
                                     <div class="accordion-body">
                                         <ul class="list-group list-group-laine footer-hover">
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="#"
+                                                <a href="/"
                                                     class="link-light text-decoration-none text-success1">Home</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="#" class="link-light text-decoration-none">Product</a>
+                                                <a href="products.html" class="link-light text-decoration-none">Product</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Brochure</a>
