--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                                 <a href="/">HOME</a>
                             </li>
                             <li>
-                                <a href="#">PRODUCTS</a>
+                                <a href="products.html">PRODUCTS</a>
                             </li>
 
                             <li>
@@ -79,7 +79,7 @@
                                                 src="https://ik.imagekit.io/ecomax/assets/images/home/logo1.png"
                                                 alt="images" class="img-fluid"></a>
                                     </div>
-                                    
+
                                 </h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                     aria-label="Close"></button>
@@ -90,7 +90,7 @@
                                         <a href="/" class="text-success">HOME</a>
                                     </li>
                                     <li class="m-2">
-                                        <a href="#">PRODUCTS</a>
+                                        <a href="products.html">PRODUCTS</a>
                                     </li>
 
                                     <li class="m-2">
@@ -509,10 +509,10 @@
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="#" class="link-light text-decoration-none ">Home</a>
+                                        <a href="/" class="link-light text-decoration-none ">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="#" class="link-light text-decoration-none">Product</a>
+                                        <a href="products.html" class="link-light text-decoration-none">Product</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -541,11 +541,11 @@
                                     <div class="accordion-body">
                                         <ul class="list-group list-group-laine footer-hover">
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="#"
+                                                <a href="/"
                                                     class="link-light text-decoration-none ">Home</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="#" class="link-light text-decoration-none">Product</a>
+                                                <a href="products.html" class="link-light text-decoration-none">Product</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Brochure</a>
