--- a/contactus.html
+++ b/contactus.html
@@ -47,7 +47,7 @@
                 <a href="/">HOME</a>
               </li>
               <li>
-                <a href="#">PRODUCTS</a>
+                <a href="products.html">PRODUCTS</a>
               </li>
 
               <li>
@@ -86,7 +86,7 @@
                     <a href="/">HOME</a>
                   </li>
                   <li class="m-2">
-                    <a href="#">PRODUCTS</a>
+                    <a href="products.html">PRODUCTS</a>
                   </li>
 
                   <li class="m-2">
@@ -275,10 +275,10 @@
                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                 <ul class="list-group footer-hover">
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                    <a href="#" class="link-light text-decoration-none ">Home</a>
+                    <a href="/" class="link-light text-decoration-none ">Home</a>
                   </li>
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                    <a href="#" class="link-light text-decoration-none">Product</a>
+                    <a href="products.html" class="link-light text-decoration-none">Product</a>
                   </li>
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                     <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -304,10 +304,10 @@
                   <div class="accordion-body">
                     <ul class="list-group list-group-laine footer-hover">
                       <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                        <a href="#" class="link-light text-decoration-none ">Home</a>
+                        <a href="/" class="link-light text-decoration-none ">Home</a>
                       </li>
                       <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                        <a href="#" class="link-light text-decoration-none">Product</a>
+                        <a href="products.html" class="link-light text-decoration-none">Product</a>
                       </li>
                       <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                         <a href="#" class="link-light text-decoration-none">Brochure</a>
